Actions
Bug #10246
closedfix apic_allocate_irq() indentation
Start date:
2019-01-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
The indentation of this function is wrong, but the code is OK; fix it up for smatch
Updated by Electric Monk over 4 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit dccbe85045092d9c23c58a4d604e7c57285ba30f
commit dccbe85045092d9c23c58a4d604e7c57285ba30f Author: John Levon <john.levon@joyent.com> Date: 2019-01-23T19:06:15.000Z 10246 fix apic_allocate_irq() indentation Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions